--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "react-native-refresh-list-view": "^1.0.10",
     "react-native-refreshlist": "^1.0.3",
     "react-native-sound": "^0.10.12",
+    "react-native-sqlite-2": "^2.0.2",
     "react-native-video": "^4.4.1",
     "react-native-wechat": "^1.9.10",
     "react-native-weibo": "^3.0.4",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "rn-global-modal": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
