SplashScreen 修复启动白屏
SplashScreen 修复启动白屏

--- a/ios/LZKKDemo/Info.plist
+++ b/ios/LZKKDemo/Info.plist
@@ -125,7 +125,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string></string>
+	<string>《遇见》请求使用你的麦克风权限，请授权；</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
