--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-refresh-list-view": "^1.0.10",
     "react-native-refreshlist": "^1.0.3",
     "react-native-sound": "^0.10.12",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-sqlite-2": "^2.0.2",
     "react-native-video": "^4.4.1",
     "react-native-wechat": "^1.9.10",
