--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-blur": "^3.2.2",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-lahk-marquee-label": "^1.1.4",
     "react-native-qq": "^2.0.5",
     "react-native-refresh-list-view": "^1.0.10",
     "react-native-refreshlist": "^1.0.3",
