--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-audio": "^4.3.0",
     "react-native-blur": "^3.2.2",
+    "react-native-easy-loading": "^1.0.6",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-lahk-marquee-label": "^1.1.4",
