百思不得姐
百思不得姐

--- a/ios/LZKKDemo/Info.plist
+++ b/ios/LZKKDemo/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>遇见</string>
+	<string>百思不得姐</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
