--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "react-native-easy-loading": "^1.0.6",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-zoom-viewer": "^2.2.26",
     "react-native-lahk-marquee-label": "^1.1.4",
     "react-native-qq": "^2.0.5",
     "react-native-refresh-list-view": "^1.0.10",
     "react-native-refreshlist": "^1.0.3",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-sound": "^0.10.12",
     "react-native-splash-screen": "^3.2.0",
     "react-native-sqlite-2": "^2.0.2",
+    "react-native-swiper": "^1.5.14",
     "react-native-video": "^4.4.1",
+    "react-native-webview": "^6.1.0",
     "react-native-wechat": "^1.9.10",
     "react-native-weibo": "^3.0.4",
     "react-navigation": "^3.9.1",
