--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.4.0",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-actionsheet": "^2.4.2",
