--- a/ios/LZKKDemo/Info.plist
+++ b/ios/LZKKDemo/Info.plist
@@ -122,10 +122,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许此App访问你的相机?</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>《遇见》请求使用你的麦克风权限，请授权；</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许此APP使用相册？</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
