--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-audio": "^4.3.0",
     "react-native-blur": "^3.2.2",
+    "react-native-code-push": "^5.6.0",
     "react-native-easy-loading": "^1.0.6",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.1.0",
